--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,18 @@
+@font-face {
+    font-family: "Raleway-Regular", "Raleway-Italic", "Raleway-Bold", "Lato-Regular", "Lato-Italic", "Lato-Bold";
+    src: url(../fonts/Raleway-Regular.ttf), url(../fonts/Raleway-Italic.ttf), url(../fonts/Raleway-Bold.ttf), url(../fonts/Lato-Regular.ttf), url(../fonts/Lato-Italic.ttf), url(../fonts/Lato-Bold.ttf);
+}
+
+html {
+    font-family: "Raleway", serif;
+    src: url(../fonts/Raleway-Regular.ttf), url(../fonts/Raleway-Italic.ttf), url(../fonts/Raleway-Bold.ttf);
+}
+
+h1, h2 {
+    font-family: "Lato", serif;
+    src: url(../fonts/Lato-Regular.ttf), url(../fonts/Lato-Italic.ttf), url(../fonts/Lato-Bold.ttf);
+}
+
 body {
     max-width: 1160px;
     text-align: center;
@@ -137,4 +152,5 @@ img {
 
 img:hover {
     opacity: 70%;
+
 }
